--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<description>Library de entidades</description>
 
 	<properties>
+	    <github.global.server>github</github.global.server>
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -79,6 +80,36 @@
 	        <artifactId>maven-jar-plugin</artifactId>
 	        <version>3.1.1</version>
 	      </plugin>
+	      <plugin>
+	        <artifactId>maven-deploy-plugin</artifactId>
+	        <version>2.8.1</version>
+	        <configuration>
+	            <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+	        </configuration>
+   		  </plugin>
+   		   <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.11</version>
+            <configuration>
+                <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+                <noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+                <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+                <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                <includes><include>**/*</include></includes>
+                <repositoryName>reserveja-model-library</repositoryName>      <!-- github repo name -->
+                <repositoryOwner>marxms</repositoryOwner>    <!-- github username  -->
+            </configuration>
+            <executions>
+              <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>deploy</phase>
+              </execution>
+            </executions>
+        </plugin>
 	    </plugins>
 	  </build>
 
