--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 		    <artifactId>hibernate-types-5</artifactId>
     		<version>2.4.1</version>
 		</dependency>
+		
+		<dependency>
+	      <groupId>org.apache.maven.wagon</groupId>
+	      <artifactId>wagon-ssh</artifactId>
+	      <version>2.10</version>
+	  </dependency>
 	</dependencies>
 	 <build>
 	    <plugins>
@@ -87,6 +93,29 @@
 	            <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
 	        </configuration>
    		  </plugin>
+   		  
+   		  <plugin>
+		    <artifactId>maven-deploy-plugin</artifactId>
+		    <version>2.8.2</version>
+		    <executions>
+		        <execution>
+		            <id>deploy-file</id>
+		            <phase>deploy</phase>
+		            <goals>
+		                <goal>deploy-file</goal>
+		            </goals>
+		            <configuration>
+		                <file>target/reserveja-model-library-0.0.1-SNAPSHOT.jar</file>
+		                <url>C:\Users\marx.menezes.sales\git\backend-auth-espaco\repo</url>
+		                <groupId>br.com.reserveja.model</groupId>
+						<artifactId>reserveja-model-library</artifactId>
+						<version>0.0.1-SNAPSHOT</version>
+		                <packaging>jar</packaging>
+		            </configuration>
+		        </execution>
+		    </executions>
+		</plugin>
+   		  
    		   <plugin>
             <groupId>com.github.github</groupId>
             <artifactId>site-maven-plugin</artifactId>
